Cleaned up some warnings